--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "src\\Libraries\\sqlite-jdbc-3.7.2.jar",
-        "src\\Libraries\\gson-2.8.2.jar"
+        "src\\Libraries\\gson-2.8.2.jar",
+        "src\\Libraries\\jdatepicker-1.3.4.jar"
     ]
 }
