--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
         "lib/**/*.jar",
         "src\\Libraries\\sqlite-jdbc-3.7.2.jar",
         "src\\Libraries\\gson-2.8.2.jar",
-        "src\\Libraries\\jdatepicker-1.3.4.jar"
+        "src\\Libraries\\jcalendar-1.4.jar"
     ]
 }
